hover changed on button home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
     <h3>Choose a natural solution to get ride of it.</h3>
     <h3>Book an experienced cat near you! </h3>
       <div class="pt-5">
-        <%= link_to "RENT A CAT", cats_path, class: "btn btn-warning btn-lg" %>
+        <%= link_to "RENT A CAT", cats_path, class: "btn btn-warning btn-home btn-lg" %>
         <!-- <button type="button" class="btn btn-info">Trouvez votre chat</button> -->
       </div>
     </div>
