--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -55,6 +55,7 @@
     font-weight: bold;
     color: $gray;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    outline: 0;
     &:hover {
       text-decoration: none;
       color: $orange;
