--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,30 +1,26 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  // height: 70px;
 }
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
-
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 100px;
+  width: 80px;
 }
 
 .lien-navbar {
   color: $blue;
   text-decoration: none;
   font-size: 25px;
-  padding-right: 25px;
-  padding-top: 20px;
+  padding-right: 30px;
+  padding-top: 10px;
+  outline: 0;
   &:hover {
     color: $orange;
     text-decoration: none;
   }
 }
-
-// .navbar-cats {
-//   display: flex;
-//   vertical-align: center;
-// }
