--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
   </button>
 
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse navbar-lewagon" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item lien-navbar">
         <%= link_to 'ALL CATS', cats_path, class: "lien-navbar"%>
@@ -20,18 +20,18 @@
         <li class="nav-item lien-navbar">
           <%= link_to 'ADD A CAT',  new_owner_cat_path, class: "lien-navbar"%>
         </li>
-        <li class="nav-item lien-navbar">
-          <%= link_to 'MY CATS',  owner_cats_path, class: "lien-navbar"%>
+     <!--    <li class="nav-item lien-navbar">
         </li>
         <li class="nav-item lien-navbar">
-          <%= link_to "MY CATS RENTS", owner_bookings_path, class: "lien-navbar"%>
-        </li>
+        </li> -->
         <li class="nav-item dropdown">
           <% if user_signed_in? %>
             <% unless current_user.avatar.key.nil?  %>
               <%= cl_image_tag current_user.avatar.key, class: "avatar dropdown-toggle" , id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <% end %>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <%= link_to 'MY CATS',  owner_cats_path, class: "dropdown-item "%>
+              <%= link_to "MY CATS RENTS", owner_bookings_path, class: "dropdown-item "%>
               <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item " if user_signed_in? %>
             </div>
           <% end %>
