--- a/app/assets/stylesheets/components/_containers.scss
+++ b/app/assets/stylesheets/components/_containers.scss
@@ -1,13 +1,25 @@
-.container-index {
-  display:grid;
+.main-container {
+  display: flex;
+  padding-top: 30px;
+}
+
+.main-container .container-index {
+  flex: 1;
+  display: grid;
   flex-direction: row;
-  width: 1200px;
-  margin: 50px auto;
   justify-content: space-between;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 50px;
+  grid-gap: 15px;
+  padding: 0 15px;
 
 }
+
+#map {
+  height: 100vh; /* viewport height */
+  position: sticky;
+  top:0;
+}
+
 
 .container-header {
   display: flex;
