and its the footer again

--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="container-header page-title">The Hunters</h1>
+<h1 class="container-header page-title">Find your hunter !</h1>
 
 
 <div class="main-container">
