--- a/app/assets/stylesheets/components/_containers.scss
+++ b/app/assets/stylesheets/components/_containers.scss
@@ -1,6 +1,6 @@
 .main-container {
   display: flex;
-  padding-top: 30px;
+  padding: 30px 35px 0 35px;
 }
 
 .main-container .container-index {
@@ -9,8 +9,8 @@
   flex-direction: row;
   justify-content: space-between;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 15px;
-  padding: 0 15px;
+  grid-gap: 35px;
+  padding: 0 35px 0 0;
 
 }
 
@@ -18,6 +18,7 @@
   height: 100vh; /* viewport height */
   position: sticky;
   top:0;
+  border-radius: 5px;
 }
 
 
