--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,36 +1,32 @@
-<div class="container-header">
-  <h1 class="page-title">MY BOOKINGS</h1>
-</div>
+<h1 class="container-header page-title">My bookings</h1>
 
 <div class="container-index-booking">
-      <% @bookings.each do |booking| %>
-        <% if booking.user_id == current_user.id %>
-          <div class="card-product" >
-            <%= cl_image_tag booking.cat.photo.key, crop: :fill %>
-            <div class="card-product-infos-bookings">
+      <% current_user.bookings.each do |booking| %>
+        <div class="card-product" >
+          <%= cl_image_tag booking.cat.photo.key, crop: :fill %>
+          <div class="card-product-infos-bookings">
+            <div>
+              <h1><%= booking.cat.name %> </h1>
               <div>
-                <h1><%= booking.cat.name %> </h1>
-                <div>
-                  <p>Booked for <%= (booking.ending_date - booking.starting_date).to_i %> days from <%= booking.starting_date.strftime("%B %d, %Y") %> </p>
-                </div>
+                <p>Booked for <%= (booking.ending_date - booking.starting_date).to_i %> days from <%= booking.starting_date.strftime("%B %d, %Y") %> </p>
               </div>
-              <div>
-                <p class="price"> <%= booking.total_price %> €</p>
-              </div>
-                  <div>
-                  <p class="price">
-                    <% case booking.status %>
-                      <% when "pending" %>
-                       <i class="fas fa-hourglass-half"></i>
-                      <% when "accepted" %>
-                        <i class="fas fa-check"></i>
-                      <% when "rejected" %>
-                        <i class="fas fa-times"></i>
-                    <% end %>
-                  </p>
-                </div>
+            </div>
+            <div>
+              <p class="price"> <%= booking.total_price %> €</p>
+            </div>
+            <div>
+              <p class="price">
+                <% case booking.status %>
+                  <% when "pending" %>
+                   <i class="fas fa-hourglass-half"></i>
+                  <% when "accepted" %>
+                    <i class="fas fa-check"></i>
+                  <% when "rejected" %>
+                    <i class="fas fa-times"></i>
+                <% end %>
+              </p>
             </div>
           </div>
-        <% end %>
+        </div>
       <% end %>
 </div>
