--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,14 +24,21 @@
         </li>
         <li class="nav-item lien-navbar">
         </li> -->
+        <li class="nav-item dropdown nav-drop">
+                <a class="nav-item dropdown-toggle lien-navbar" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  MY OWN CATS
+                </a>
+                <div class="dropdown-menu " aria-labelledby="navbarDropdown">
+                  <%= link_to 'MY CATS',  owner_cats_path, class: "dropdown-item "%>
+                  <%= link_to "MY CATS RENTS", owner_bookings_path, class: "dropdown-item "%>
+                </div>
+              </li>
         <li class="nav-item dropdown">
           <% if user_signed_in? %>
             <% unless current_user.avatar.key.nil?  %>
               <%= cl_image_tag current_user.avatar.key, class: "avatar dropdown-toggle" , id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <% end %>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <%= link_to 'MY CATS',  owner_cats_path, class: "dropdown-item "%>
-              <%= link_to "MY CATS RENTS", owner_bookings_path, class: "dropdown-item "%>
               <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item " if user_signed_in? %>
             </div>
           <% end %>
