--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -5,26 +5,22 @@
     <div class="card-product" >
       <%= cl_image_tag booking.cat.photo.key, width: 300, height: 200, crop: :fill %>
       <div class="card-product-infos-bookings">
-        <div>
+        <div class= "name">
           <h1><%= link_to booking.cat.name, cat_path(booking.cat) %> </h1>
-          <div>
-            <p>Booked for <%= (booking.ending_date - booking.starting_date).to_i %> days from <%= booking.starting_date.strftime("%B %d, %Y") %> </p>
-          </div>
+          <p>Booked for <%= (booking.ending_date - booking.starting_date).to_i %> days from <%= booking.starting_date.strftime("%B %d, %Y") %> </p>
         </div>
-        <div>
-          <p class="price"> <%= booking.total_price %> €</p>
+        <div class="price">
+          <p><%= booking.total_price %> € </p>
         </div>
-        <div>
-          <p class="price">
-            <% case booking.status %>
-              <% when "pending" %>
-               <i class="fas fa-hourglass-half"></i>
-              <% when "accepted" %>
-                <i class="fas fa-check"></i>
-              <% when "rejected" %>
-                <i class="fas fa-times"></i>
-            <% end %>
-          </p>
+        <div class="price">
+          <% case booking.status %>
+            <% when "pending" %>
+              <i class="fas fa-hourglass-half"></i>
+            <% when "accepted" %>
+              <i class="fas fa-check"></i>
+            <% when "rejected" %>
+              <i class="fas fa-times"></i>
+          <% end %>
         </div>
       </div>
     </div>
