--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
                   required: true,
                   input_html: { autocomplete: "new-password" } %>
 
-      <%= f.button :submit, "Sign up", class: "btn btn-primary mb-4" %>
+      <%= f.button :submit, "Sign up", class: "btn btn-warning btn-home mb-4" %>
     </div>
 
   <% end %>
