--- a/app/assets/stylesheets/components/_page-title.scss
+++ b/app/assets/stylesheets/components/_page-title.scss
@@ -3,3 +3,11 @@
   font-weight: bold;
   font-size: 70px;
 }
+
+.form-add-cat {
+  color: $blue;
+  font-weight: bold;
+  text-align: center;
+  font-size: 50px;
+  padding-top: 20px;
+}
