reject and accept action done

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -51,4 +51,9 @@
   &:hover {
     color: $blue;
   }
+  &:active {
+    color: $orange;
+    background-color: $light-gray;
+    outline: 0;
+  }
 }
