--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -35,7 +35,7 @@
               <%= cl_image_tag current_user.avatar.key, class: "avatar dropdown-toggle" , id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <% end %>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item " if user_signed_in? %>
+              <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item lien-drop" if user_signed_in? %>
             </div>
           <% end %>
         </li>
