--- a/app/views/owner/cats/new.html.erb
+++ b/app/views/owner/cats/new.html.erb
@@ -13,7 +13,7 @@
      <% end %>
     </div>
     <div class="col-12 col-lg-6">
-      <%= image_tag "etape1.svg"%>
+      <%= image_tag "chat-livre.png"%>
     </div>
   </div>
 </div>
