--- a/app/views/owner/cats/new.html.erb
+++ b/app/views/owner/cats/new.html.erb
@@ -9,7 +9,7 @@
         <%= f.input :age %>
         <%= f.input :price_per_day %>
         <%= f.input :photo, label: "Add photo", as: :file %>
-        <%= f.button :submit, "Add cat", class: "btn-home mb-4" %>
+        <%= f.button :submit, "ADD CAT", class: "btn btn-home btn-warning mb-4" %>
      <% end %>
     </div>
     <div class="col-12 col-lg-6">
