--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,8 +3,8 @@
 // For example:
 $red: #FD1015;
 $blue: #2e626a;
-$yellow: #FFC65A;
+$yellow: #f3ca40;
 $orange: #fe5f55;
-$green: #1EDD88;
+$green: #329f5b;
 $gray: #505358;
 $light-gray: #F4F4F4;
