--- a/app/views/owner/bookings/index.html.erb
+++ b/app/views/owner/bookings/index.html.erb
@@ -10,19 +10,19 @@
             <h1><%= link_to booking.cat.name, cat_path(booking.cat) %> </h1>
           </div>
           <p>Booked for <%= (booking.ending_date - booking.starting_date).to_i %> days from <%= booking.starting_date.strftime("%B %d, %Y") %> </p>
-          <% if booking.status == 'pending' %>
-            <div class="accept">
-              <%= link_to "Accept", accept_owner_booking_path(booking), method: :patch %>
-            </div>
-            <div class="reject">
-              <%= link_to "Reject", decline_owner_booking_path(booking), method: :patch %>
-            </div>
-          <% elsif booking.status == 'accepted' %>
-            <i class="fas fa-check price"></i>
-          <% else %>
-            <i class="fas fa-times price"></i>
-            <!-- CODE TO ADD IN BOTH LINES ABOVE TO CALL OWNER/BOOKINGS_CONTROLLER ACCEPT AND REJECT METHOD -->
-          <% end %>
+          <div class = "price">
+            <% if booking.status == 'pending' %>
+              <%= link_to "Accept", accept_owner_booking_path(booking), method: :patch, class: "accept" %>
+
+              <%= link_to "Reject", decline_owner_booking_path(booking), method: :patch, class: "reject" %>
+
+            <% elsif booking.status == 'accepted' %>
+              <i class="fas fa-check"></i>
+            <% else %>
+              <i class="fas fa-times"></i>
+              <!-- CODE TO ADD IN BOTH LINES ABOVE TO CALL OWNER/BOOKINGS_CONTROLLER ACCEPT AND REJECT METHOD -->
+            <% end %>
+          </div>
         </div>
         <div class="price">
           <p > <%= booking.total_price %> €</p>
