--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -25,7 +25,12 @@
       </div>
     <% end %>
   </div>
-        <img id="map" src='https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/2.346,48.8595,11.72,0,0/600x1000?access_token=pk.eyJ1Ijoiamp1bGllbndhZ29uIiwiYSI6ImNrN3pjNTk2YjA0dHgzaW5xandwNWxsbTgifQ.dxr_nrhoFOA9GeP2aNQQIA'>
+    <div id="map"
+     style="width: 30%; "
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
+        <!-- <img id="map" src='https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/2.346,48.8595,11.72,0,0/600x1000?access_token=pk.eyJ1Ijoiamp1bGllbndhZ29uIiwiYSI6ImNrN3pjNTk2YjA0dHgzaW5xandwNWxsbTgifQ.dxr_nrhoFOA9GeP2aNQQIA'> -->
 </div>
 
 
