--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -47,9 +47,40 @@
     color: $orange;
     opacity: 0.8;
   }
+  .status {
+    text-align: center;
+    // padding-right: 15px;
+    .fa-check {
+      color: $green;
+      font-size: 50px;
+    }
+    .fa-times {
+      color: $gray;
+      font-size: 50px;
+      .card-product{
+        opacity: 0.3;
+      }
+    }
+  }
 
-  .price i{
-    opacity: 0.8;
+
+
+  .status .fa-check-circle {
+    font-size: 50px;
+    color: $green;
+    &:hover {
+      text-decoration: none;
+      opacity: 0.7;
+    }
+  }
+
+  .status .fa-times-circle {
+    font-size: 50px;
+    color: $gray;
+    &:hover {
+      text-decoration: none;
+      opacity: 0.7;
+    }
   }
 
   p {
@@ -66,29 +97,6 @@
     &:hover {
       text-decoration: none;
       color: $orange;
-    }
-  }
-
-  .price {
-    .accept {
-      font-size: 20px;
-      font-weight: bold;
-      color: $green;
-      outline: 0;
-      &:hover {
-        text-decoration: none;
-        opacity: 0.7;
-      }
-    }
-    .reject {
-      font-size: 20px;
-      font-weight: bold;
-      color: $gray;
-      outline: 0;
-      &:hover {
-        text-decoration: none;
-        opacity: 0.7;
-      }
     }
   }
 }
