--- a/app/assets/stylesheets/components/_icon-color.scss
+++ b/app/assets/stylesheets/components/_icon-color.scss
@@ -1,17 +1,17 @@
 .accepted {
   color: $success;
-  margin-right: 30px;
   opacity: 0.8;
+  font-size: 50px;
 }
 
 .pending {
   color: $info;
-  margin-right: 30px;
+  font-size: 40px;
   opacity: 0.8;
 }
 
 .rejected {
   color: $danger;
-  margin-right: 30px;
+  font-size: 50px;
   opacity: 0.8;
 }
