--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -11,7 +11,7 @@
 
         <div class="card-trip-infos-index-cats">
           <div>
-           <h3><%= link_to cat.name.upcase, cat_path(cat) %></h3>
+           <h3><%= link_to cat.name, cat_path(cat) %></h3>
             <div class="card-trip-mouses">
               <% unless cat.performance.nil? %>
                 <% cat.performance.times do %>
